--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "postgres": "^3.4.5",
     "react": "^18.0.0",
     "react-circular-progressbar": "^2.1.0",
+    "react-confetti": "^6.2.2",
     "react-dom": "^18.0.0",
+    "react-use": "^17.6.0",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
