--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "next-themes": "^0.4.4",
     "pg": "^8.13.1",
     "postgres": "^3.4.5",
+    "ra-data-simple-rest": "^5.5.2",
     "react": "^18.0.0",
+    "react-admin": "^5.5.2",
     "react-circular-progressbar": "^2.1.0",
     "react-confetti": "^6.2.2",
     "react-dom": "^18.0.0",
